removed all valid warnings